2012-03-11  Per Bothner  <per@bothner.com>

	* StreamsPrimitive.scm (stream-force): Moved from here ...
	* StreamsType.scm: ... here, because it is no part of the API
	for streams.primitive.

2012-02-07  Jamison Hope  <jrh@theptrgroup.com>

	* srfi13.scm (let-optionals*): Re-implement to better match reference
	implementation.  This fixes a crash when calling string-contains.

2012-02-05  Per Bothner  <per@bothner.com>

	* enums.scm: Use #, and #,@ instead of , and ,@ in quasisyntax.

2012-01-31  Per Bothner  <per@bothner.com>

	* StreamsType.scm: Rewrite to build on top of
	the new delay/lazy/force primitives.
	* StreamsPrimitive.scm: Mostly re-write.

2011-12-09  Per Bothner  <per@bothner.com>

	* gui.scm (image-width, image-height): Fix typo.
	* Makefile.am (SCM_COMPILE_FLAGS): New flags.

2011-10-29  Per Bothner  <per@bothner.com>

	* readtable.scm (define-reader-ctor): Improve type specifiers
	to avoid compiler warning.

2011-09-24  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: Update character sets to match Unicode 6 and the
	Java-7 java.lang.Character predicates.

2011-05-02  Per Bothner  <per@bothner.com>

	* syntaxutils.scm (unrewrite-let): Update for new LetExp representation.

2011-02-25  Jamison Hope  <jrh@theptrgroup.com>

	* srfi13.scm: Fixes to allows compilation without warnings.
	(check-arg, char-cased?): New procedures.
	(:optional, let-optionals*): New syntax.

2011-02-10  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: Fix Java-6 dependency.

2011-02-08  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: New implementation of SRFI-14.
	* Makefile.am: Update accordingly.

2011-01-17  Per Bothner  <per@bothner.com>

	* syntaxutils.scm (rewrite-form): Call Language#getCompilation rather
	than hard-wiring in call the Translator constructor.

2011-01-03  Per Bothner  <per@bothner.com>

	* enums.scm (%define-enum): Inline use of symbol-append.
	Use string literal instead of quoted symbol for "[]".
	(symbol-append): Remove function.
